--- a/index.html
+++ b/index.html
@@ -57,13 +57,14 @@
             <h1 class="text-uppercase">
               <strong>Pierwszy List do Koryntian</strong>
             </h1>
-            <h4>
-                Konferencja biblijna, 19-21 październik 2018
+            <h4 class="text-uppercase">
+                <strong>Konferencja biblijna, 19-21 październik 2018</strong>
             </h4>
-            <hr>
+            <br>
           </div>
           <div class="col-lg-8 mx-auto">
-            <p class="text-faded">Zapraszamy na jesienną konferencję biblijną. Wykładowca Jerry Collins będzie nauczał z Pierwszego listu do Koryntian. </p>
+            <p class="text-white">Zapraszamy na jesienną konferencję biblijną. Wykładowca Jerry Collins będzie nauczał z Pierwszego listu do Koryntian. </p>
+			<hr>
             <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Czytaj więcej!</a>
           </div>
         </div>
