--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <!-- Custom styles for this template -->
     <link href="css/creative.min.css" rel="stylesheet">
-
+    <link href="css/singup.css" rel="stylesheet">
   </head>
 
   <body id="page-top">
@@ -123,19 +123,26 @@
 
     <section class="bg-primary" id="signup">
       <div class="container">
-        <div class="row">
+        <div class="row"></div>
+      </div id="singup">
           <div class="col-lg-8 mx-auto text-center">
             <h2 class="section-heading text-white">Zapisy</h2>
             <hr class="light my-4">
             <p class="text-faded mb-4">Już wkrótce będzie można zarejestrować się na konferencję. Jest możliwość zapisów tylko na wybrane dni</p>
-            <a class="btn btn-light btn-xl js-scroll-trigger" href="#signup">Zapisz się!</a>
+            <a class="btn btn-light btn-xl js-scroll-trigger" href="#signup" v-on:click="opened = true">Zapisz się</a>
+            <div v-if="opened">
+              <hr class="light my-4">
+               <h3 class="section-heading text-white"> Formularz zapisow </h3>
+               <input type="text" class="form-control" v-model="email" placeholder="e-mail">
+               <input v-model="fistname" placeholder="Imię">
+               <input v-model="lastname" placeholder="Nazwisko">
+            </div>
           </div>
         </div>
       </div>
     </section>
 
-   
-
+  
     <section id="contact">
       <div class="container">
         <div class="row">
@@ -172,6 +179,9 @@
     <!-- Custom scripts for this template -->
     <script src="js/creative.min.js"></script>
 
+    <!-- singup -->
+    <script src="https://npmcdn.com/vue/dist/vue.js"></script>
+    <script src="js/singup.js"></script>
   </body>
 
 </html>
