--- a/home.html
+++ b/home.html
@@ -25,7 +25,7 @@
   <link href="lib/magnific-popup/magnific-popup.css" rel="stylesheet">
 
   <!-- Custom styles for this template -->
-  <link href="css/creative.min.css" rel="stylesheet">
+  <link href="css/creative.css" rel="stylesheet">
   <link href="css/singup.css" rel="stylesheet">
 </head>
 
@@ -128,10 +128,9 @@
           <div class="service-box mt-5 mx-auto">
             <i class="fa fa-4x fa-money text-primary mb-3 sr-icons"></i>
             <h3 class="mb-3">Koszty</h3>
-            <p class="text-muted mb-0">200 zł - pokój hotelowy*</p>
-            <p class="text-muted mb-0">180 zł - domek </p>
-            <p class="text-muted">*liczba miejsc ograniczona</p>
+            <p class="text-muted mb-0">200 zł - nocleg w Domku*</p>
             <p class="text-muted mb-0">Noclegi i wyżywienie w cenie.</p>
+            <p class="text-muted">*liczba miejsc ograniczona</p>
           </div>
         </div>
       </div>
@@ -145,8 +144,11 @@
     <div class="col-lg-8 mx-auto text-center">
       <h2 class="section-heading text-white">Zapisy</h2>
       <hr class="light my-4">
-      <p class="text-faded mb-4">Już wkrótce otwarcie zapisów na konferencje. Oczywiście będzie możliwość zapisania się na pojedyncze dni i wybrane posiłki.</p>
-      </div>
+      <p class="text-faded mb-4">Zapisy trwają do 10 października. Jest możliwosć zapisania się tylko na pojedyncze dni oraz wybrane posiłki i noclegi.</p>
+      <hr>
+      <a class="btn btn-secondary btn-xl js-scroll-trigger text-primary" href="https://docs.google.com/forms/d/1sn_EpYQCh_7sFOkYl4gv-A0-BeNFACoPVEv9JuEkwXo/">Zapisz się!</a>  
+    </div>
+     
     </div>
     </div>
     </div>
