--- a/home.html
+++ b/home.html
@@ -62,13 +62,12 @@
             <strong>Pierwszy List do Koryntian</strong>
           </h1>
           <h4 class="text-uppercase">
-            <strong>Konferencja biblijna, 19-21 październik 2018</strong>
+            <strong>Konferencja biblijna, 4-6 październik 2019</strong>
           </h4>
           <br>
         </div>
-        <div class="col-lg-8 mx-auto">
-          <p class="text-white">Zapraszamy na jesienną konferencję biblijną. Będziemy poznawać wolę Boga rozważając Pierwszy List do Koryntian.
-             Wykłady poprowadzi dr Jerry Collins.
+        <div class="col-lg-10 mx-auto">
+          <p class="text-white">Zapraszamy na jesienną konferencję biblijną. Kontynuujemy rozważania Pierwszego Listu do Koryntian, rozdziały 10-14. Wykłady poprowadzi dr Jerry Collins.
           </p>
           <hr>
           <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Zobacz więcej!</a>
@@ -119,7 +118,7 @@
             <i class="fa fa-4x fa-calendar text-primary mb-3 sr-icons"></i>
             <h3 class="mb-3">Termin</h3>
             <p class="text-muted mb-0">
-                <strong>19-21 październik</strong>
+                <strong>4-6 październik</strong>
               <br>piątek i sobota 9:30-18:30</strong>
               <br>Niedziela 9:30-14:00
           </div>
@@ -128,7 +127,7 @@
           <div class="service-box mt-5 mx-auto">
             <i class="fa fa-4x fa-money text-primary mb-3 sr-icons"></i>
             <h3 class="mb-3">Koszty</h3>
-            <p class="text-muted mb-0">200 zł - nocleg w Domku*</p>
+            <p class="text-muted mb-0">210 zł - nocleg w Domku*</p>
             <p class="text-muted mb-0">Noclegi i wyżywienie w cenie.</p>
             <p class="text-muted">*liczba miejsc ograniczona</p>
           </div>
@@ -144,9 +143,9 @@
     <div class="col-lg-8 mx-auto text-center">
       <h2 class="section-heading text-white">Zapisy</h2>
       <hr class="light my-4">
-      <p class="text-faded mb-4">Zapisy trwają do 10 października. Jest możliwosć zapisania się tylko na pojedyncze dni oraz wybrane posiłki i noclegi.</p>
+      <p class="text-faded mb-4">Zapisy trwają do 22 wrześni (niedziela). Jest możliwosć zapisania się tylko na pojedyncze dni oraz wybrane posiłki i noclegi.</p>
       <hr>
-      <a class="btn btn-secondary btn-xl js-scroll-trigger text-primary" href="https://docs.google.com/forms/d/1sn_EpYQCh_7sFOkYl4gv-A0-BeNFACoPVEv9JuEkwXo/">Zapisz się!</a>  
+      <a class="btn btn-secondary btn-xl js-scroll-trigger text-primary" href="https://docs.google.com/forms/d/17qBmHf1P1F8D6lL2S9-2zgET9sRLc0IkZxmoAGy25Mo">Zapisz się!</a>  
     </div>
      
     </div>
@@ -171,7 +170,7 @@
         <div class="col-lg-4 mr-auto text-center">
           <i class="fa fa-envelope-o fa-3x mb-3 sr-contact"></i>
           <p>
-            <a href="mailto:konferencjabiblijna2018@gmail.com">konferencjabiblijna2018@gmail.com</a>
+            <a href="mailto:zebysluzyc@gmail.com">zebysluzyc@gmail.com</a>
           </p>
         </div>
       </div>
