--- a/home.html
+++ b/home.html
@@ -118,7 +118,7 @@
             <i class="fa fa-4x fa-calendar text-primary mb-3 sr-icons"></i>
             <h3 class="mb-3">Termin</h3>
             <p class="text-muted mb-0">
-                <strong>21-22 marzec</strong>
+                <strong>21-22 Marzec</strong>
               <br>Sobota 9:00-18:00</strong>
               <br>Niedziela 9:00-14:00
           </div>
@@ -144,7 +144,7 @@
     <div class="col-lg-8 mx-auto text-center">
       <h2 class="section-heading text-white">Zapisy</h2>
       <hr class="light my-4">
-      <p class="text-faded mb-4">Zapisy trwają do 10 marca (wtorek). Jest możliwosć zapisania się tylko na pojedyncze dni oraz wybrane posiłki.</p>
+      <p class="text-faded mb-4">Zapisy trwają do 10 Marca. Jest możliwosć zapisania się tylko na pojedyncze dni oraz wybrane posiłki.</p>
       <hr>
       <a class="btn btn-secondary btn-xl js-scroll-trigger text-primary" href="http://bit.do/tymoteusz2020">Zapisz się!</a>  
     </div>
@@ -166,7 +166,8 @@
       <div class="row">
         <div class="col-lg-4 ml-auto text-center">
           <i class="fa fa-phone fa-3x mb-3 sr-contact"></i>
-          <p>Szymon  <img width="130" height="25" src="img/number.jpg" title="Szymon"></p>
+          <p>Aleksander<img width="130" height="40" src="img/number-ag.jpg" title="Aleksander"></p>
+          <p>Szymon<img width="130" height="40" src="img/number-sm.jpg" title="Szymon"></p>
         </div>
         <div class="col-lg-4 mr-auto text-center">
           <i class="fa fa-envelope-o fa-3x mb-3 sr-contact"></i>
