--- a/home.html
+++ b/home.html
@@ -144,7 +144,7 @@
       <hr class="light my-4">
       <p class="text-faded mb-4">Zapisy trwają do 10 marca (wtorek). Jest możliwosć zapisania się tylko na pojedyncze dni oraz wybrane posiłki.</p>
       <hr>
-      <a class="btn btn-secondary btn-xl js-scroll-trigger text-primary" href="bit.do/tymoteusz2020">Zapisz się!</a>  
+      <a class="btn btn-secondary btn-xl js-scroll-trigger text-primary" href="http://bit.do/tymoteusz2020">Zapisz się!</a>  
     </div>
      
     </div>
