--- a/home.html
+++ b/home.html
@@ -66,8 +66,8 @@
           </h4>
           <br>
         </div>
-        <div class="col-lg-10 mx-auto">
-          <p class="text-white">Zapraszamy na wiosenną konferencję biblijną. <br> Rozważania Listów do Tymoteusza poprowadzi Dawid DeWitt.
+        <div class="col-lg-12 mx-auto">
+          <p class="text-white">Zapraszamy na wiosenną konferencję biblijną. Rozważania Listów do Tymoteusza poprowadzi Dawid DeWitt. <br> Wykłady odbędą się w formie wideokonferencji.
           </p>
           <hr>
           <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Zobacz więcej!</a>
